# whisperx-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cuda  README.md  config.py  docker-compose.cuda.yml  docker-compose.yml  env.example  main.py  pyproject.toml
.github/workflows/: docker-build.yml
src/whisperx_api/: __init__.py  app.py  config.py  models.py  services.py  validators.py
